WIP: draw two nodes

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^3.20.7",
     "axios": "^0.19.0",
     "jsplumb": "^2.11.1",
+    "jsplumb-react": "^0.0.27",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-css-modules": "^4.7.11",
@@ -65,6 +66,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.5",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "commitizen": "^4.0.3",
     "cz-customizable": "^6.2.0",
     "env-cmd": "^9.0.3",
