--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-css-modules": "^4.7.11",
+    "react-dnd": "^9.3.2",
+    "react-dnd-html5-backend": "^9.3.2",
     "react-dom": "^16.8.6",
     "react-pan-and-zoom-hoc": "^2.1.3",
     "react-router-dom": "^5.0.1",
@@ -61,6 +63,7 @@
     "@types/jsplumb": "^2.5.7",
     "@types/lodash": "^4.14.136",
     "@types/react-css-modules": "^4.6.2",
+    "@types/react-dnd": "^3.0.2",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-virtualized": "^9.21.4",
     "@types/redux": "^3.6.0",
