WIP: add code editor

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/react-dom": "16.8.5",
     "antd": "^3.20.7",
     "axios": "^0.19.0",
+    "brace": "^0.11.1",
     "jsplumb": "^2.11.1",
     "jsplumb-react": "^0.0.27",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
+    "react-ace": "^7.0.2",
     "react-css-modules": "^4.7.11",
     "react-dnd": "^9.3.2",
     "react-dnd-html5-backend": "^9.3.2",
