--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^16.8.6",
     "react-pan-and-zoom-hoc": "^2.1.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "react-virtualized": "^9.21.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
@@ -69,5 +69,16 @@
     "react-app-rewire-stylus-modules": "^0.0.2",
     "react-app-rewired": "^2.1.3",
     "validate-commit-msg": "^2.14.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
