--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # current environment
-REACT_APP_ENV=dev
+REACT_APP_ENV=prod
 
 # backend implemented by GO
-REACT_APP_GO_WORKFLOW_SERVER=http://47.107.238.202:8058/flow/api
+REACT_APP_GO_WORKFLOW_SERVER=http://prod.xx.com/workflow/api
