--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 REACT_APP_ENV=prod
 
 # backend implemented by GO
-REACT_APP_GO_WORKFLOW_SERVER=http://prod.xx.com/workflow/api
+REACT_APP_GO_WORKFLOW_SERVER=http://ai.huya.com/workflow/api
