--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-pan-and-zoom-hoc": "^2.1.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-split-pane": "^0.1.87",
+    "react-syntax-highlighter": "^11.0.2",
     "react-virtualized": "^9.21.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
@@ -56,6 +58,7 @@
     "@types/react-css-modules": "^4.6.2",
     "@types/react-dnd": "^3.0.2",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-syntax-highlighter": "^10.2.1",
     "@types/react-virtualized": "^9.21.4",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
