--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@
 REACT_APP_ENV=dev
 
 # backend implemented by GO
-REACT_APP_GO_WORKFLOW_SERVER=http://dev.xx.com/workflow/api
+REACT_APP_GO_WORKFLOW_SERVER=http://haicong-test.huya.com/workflow/api
